# pobject

./: .gitignore  CMakeLists.txt  Makefile  README.md
doc/: CMakeLists.txt  COPYING  README
src/: CMakeLists.txt  libpobject.pc.in  pobject.vala  pobject_core.vala  pobject_generator.vala  pobject_migration.vala  pobject_object.vala  pobject_preprocessor.vala  pobject_selector.vala  pobject_template.vala
tests/: CMakeLists.txt  test_pobject.vala
